fix scroll issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8499,7 +8499,8 @@ h1, h2, h3, h4, h5,
               right: 0;
               bottom: 0;
               z-index: 1;
-              padding: 1em; } }
+              padding: 1em;
+              overflow:scroll; } }
           .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
             width: 100%; }
             @media (min-width: 992px) {
